# knowledge-discovery-pwr

./: .gitignore
lab01/: Makefile  main.py  pyproject.toml  requirements.txt
lab01/scripts/: main_1.py
lab01/src/: utils.py
lab02/: Lab2.ipynb
lab03/: .dockerignore  .gitignore  Dockerfile  Lab3.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
lab03/.dvc/: config
lab03/data/: raw.dvc
lab03/infra/: .env.sample  docker-compose.yml  setup_dvc.sh
lab03/metrics/: dummy_baseline_metrics.json
lab03/scripts/: preprocess.py  train_dummy_baseline.py  train_test_split.py
lab1-jkociecki/notebooks/: notebook_1.ipynb
lab1-jkociecki/scripts/: main_2.py
summer-26-lab-2-jkociecki/: Dockerfile  Lab2.ipynb  docker-compose.yml  requirements.txt
